Added retroarch.conf for 1.3.6.

--- a/retroarch.cfg
+++ b/retroarch.cfg
@@ -1559,31 +1559,51 @@ menu_info_btn = "2"
 menu_default_btn = "3"
 menu_scroll_down_btn = "11"
 menu_scroll_up_btn = "10"
-libretro_path = ""
-core_options_path = ""
+input_bind_timeout = "5"
+ui_companion_enable = "false"
 recording_output_directory = ""
 recording_config_directory = ""
-content_history_dir = ""
+core_options_path = ""
 video_shader = ""
 bundle_assets_src_path = ""
 bundle_assets_dst_path = ""
 bundle_assets_dst_path_subdir = ""
-playlist_names = ""
-playlist_cores = ""
 menu_wallpaper = ""
-audio_device = ""
+menu_wallpaper_opacity = "0.300000"
+menu_footer_opacity = "1.000000"
+menu_header_opacity = "1.000000"
 video_filter = ""
 audio_dsp_plugin = ""
-camera_device = ""
-cheevos_username = ""
-cheevos_password = ""
-video_context_driver = ""
-cache_directory = ""
-input_remapping_path = ""
-resampler_directory = ""
 input_overlay = ""
 input_osk_overlay = ""
 video_font_path = ""
+content_history_dir = ""
+playlist_names = ""
+playlist_cores = ""
+menu_throttle_framerate = "true"
+menu_linear_filter = "true"
+menu_thumbnails = "3"
+video_max_swapchain_images = "3"
+auto_screenshot_filename = "true"
+audio_device = ""
+camera_device = ""
+cheevos_hardcore_mode_enable = "false"
+cheevos_username = ""
+cheevos_password = ""
+video_context_driver = ""
+video_message_color = "ffff00"
+cache_directory = ""
+resampler_directory = ""
+thumbnails_directory = "~/.config/retroarch/thumbnails"
+xmb_scale_factor = "100"
+xmb_alpha_factor = "75"
+xmb_theme = "0"
+xmb_menu_color_theme = "4"
+materialui_menu_color_theme = "0"
+xmb_shadows_enable = "true"
+menu_shader_pipeline = "2"
+xmb_font = ""
 netplay_ip_address = ""
 netplay_nickname = ""
 input_keyboard_layout = ""
+input_poll_type_behavior = "2"
