--- a/retroarch-1.4.1.cfg
+++ b/retroarch-1.4.1.cfg
@@ -1,167 +1,107 @@
 config_save_on_exit = "true"
-input_turbo_period = "6"
-input_duty_cycle = "3"
-input_max_users = "5"
-input_menu_toggle_gamepad_combo = "0"
-input_axis_threshold = "0.500000"
-ui_companion_start_on_boot = "true"
-video_gpu_record = "false"
-input_remap_binds_enable = "true"
-back_as_menu_toggle_enable = "true"
-netplay_client_swap_input = "true"
-input_descriptor_label_show = "true"
-input_descriptor_hide_unbound = "false"
-load_dummy_on_core_shutdown = "true"
-builtin_mediaplayer_enable = "true"
-builtin_imageviewer_enable = "true"
-fps_show = "false"
-ui_menubar_enable = "true"
-suspend_screensaver_enable = "true"
+core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/linux/x86_64/latest/"
+core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
 libretro_directory = "~/.config/retroarch/cores"
 libretro_info_path = "~/.config/retroarch/cores"
 content_database_path = "~/.config/retroarch/database/rdb"
 cheat_database_path = "~/.config/retroarch/cheats"
+content_history_path = "~/.config/retroarch/content_history.lpl"
+content_music_history_path = "~/.config/retroarch/content_music_history.lpl"
+content_video_history_path = "~/.config/retroarch/content_video_history.lpl"
+content_image_history_path = "~/.config/retroarch/content_image_history.lpl"
 cursor_directory = "~/.config/retroarch/database/cursors"
-rewind_enable = "false"
-audio_latency = "64"
-audio_sync = "true"
-audio_block_frames = "0"
-rewind_granularity = "1"
-video_shader_enable = "false"
-video_aspect_ratio = "-1.000000"
-video_aspect_ratio_auto = "false"
-video_windowed_fullscreen = "true"
-video_scale = "3.000000"
-autosave_interval = "0"
-video_crop_overscan = "true"
-video_scale_integer = "false"
-video_smooth = "true"
-video_threaded = "false"
-video_shared_context = "false"
-video_force_srgb_disable = "false"
-video_fullscreen = "false"
-bundle_assets_extract_enable = "false"
-bundle_assets_extract_version_current = "0"
-bundle_assets_extract_last_version = "0"
-video_refresh_rate = "59.950001"
-video_monitor_index = "0"
-video_fullscreen_x = "0"
-video_fullscreen_y = "0"
-video_driver = "gl"
-record_driver = "ffmpeg"
-camera_driver = "null"
-location_driver = "null"
-threaded_data_runloop_enable = "true"
-dpi_override_enable = "true"
-dpi_override_value = "200"
-menu_driver = "rgui"
-menu_pause_libretro = "true"
-menu_mouse_enable = "false"
-menu_pointer_enable = "false"
-menu_timedate_enable = "true"
-menu_core_enable = "true"
-menu_dynamic_wallpaper_enable = "false"
-menu_boxart_enable = "false"
-video_vsync = "true"
-video_hard_sync = "false"
-video_hard_sync_frames = "0"
-video_frame_delay = "0"
-video_black_frame_insertion = "false"
-video_disable_composition = "false"
-pause_nonactive = "true"
-video_swap_interval = "1"
-video_gpu_screenshot = "true"
-video_rotation = "0"
 screenshot_directory = "default"
-aspect_ratio_index = "21"
-core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/linux/x86_64/latest/"
-core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
-core_updater_auto_extract_archive = "true"
-camera_allow = "false"
-cheevos_enable = "false"
-cheevos_test_unofficial = "false"
-audio_rate_control = "true"
-audio_rate_control_delta = "0.005000"
-audio_max_timing_skew = "0.050000"
-audio_volume = "0.000000"
-audio_driver = "alsa"
-audio_enable = "true"
-audio_mute_enable = "false"
-audio_out_rate = "48000"
-location_allow = "false"
-video_font_size = "32.000000"
-video_font_enable = "true"
-ups_pref = "false"
-bps_pref = "false"
-ips_pref = "false"
 system_directory = "default"
-input_remapping_directory = "~/.config/retroarch/remap"
-audio_resampler = "sinc"
-savefile_directory = "default"
-savestate_directory = "default"
+input_remapping_directory = "~/.config/retroarch/config/remaps"
 video_shader_dir = "~/.config/retroarch/shaders"
 video_filter_dir = "default"
-audio_filter_dir = "default"
 core_assets_directory = "~/.config/retroarch/downloads"
 assets_directory = "~/.config/retroarch/assets"
 dynamic_wallpapers_directory = "default"
-boxarts_directory = "default"
+thumbnails_directory = "~/.config/retroarch/thumbnails"
 playlist_directory = "~/.config/retroarch/playlists"
+joypad_autoconfig_dir = "~/.config/retroarch/autoconfig"
+audio_filter_dir = "default"
+savefile_directory = "default"
+savestate_directory = "default"
 rgui_browser_directory = "default"
-rgui_config_directory = "default"
-rgui_show_start_screen = "false"
-menu_navigation_wraparound_enable = "true"
-menu_navigation_browser_filter_supported_extensions_enable = "true"
-menu_show_advanced_settings = "true"
-menu_entry_normal_color = "ffffffff"
-menu_entry_hover_color = "ff64ff64"
-menu_title_color = "ff64ff64"
-content_history_path = "~/.config/retroarch/content_history.lpl"
-content_history_size = "100"
-joypad_autoconfig_dir = "~/.config/retroarch/autoconf"
-input_autodetect_enable = "true"
+rgui_config_directory = "~/.config/retroarch/config"
 overlay_directory = "~/.config/retroarch/overlay"
-input_overlay_enable = "true"
-input_overlay_enable_autopreferred = "true"
-input_overlay_hide_in_menu = "true"
+screenshot_directory = "default"
+video_driver = "gl"
+record_driver = "ffmpeg"
+camera_driver = "null"
+wifi_driver = "null"
+location_driver = "null"
+menu_driver = "xmb"
+audio_driver = "pulse"
+audio_resampler = "sinc"
+input_driver = "udev"
+input_joypad_driver = "udev"
+video_aspect_ratio = "-1.000000"
+video_scale = "3.000000"
+video_refresh_rate = "59.940060"
+audio_rate_control_delta = "0.005000"
+audio_max_timing_skew = "0.050000"
+audio_volume = "0.000000"
 input_overlay_opacity = "0.700000"
 input_overlay_scale = "1.000000"
-osk_overlay_directory = "~/.config/retroarch/overlay"
-input_osk_overlay_enable = "true"
+menu_wallpaper_opacity = "0.300000"
+menu_footer_opacity = "1.000000"
+menu_header_opacity = "1.000000"
 video_message_pos_x = "0.050000"
 video_message_pos_y = "0.050000"
+video_font_size = "32.000000"
+fastforward_ratio = "0.000000"
+slowmotion_ratio = "3.000000"
+input_axis_threshold = "0.500000"
+input_bind_timeout = "5"
+input_turbo_period = "6"
+input_duty_cycle = "3"
+input_max_users = "5"
+input_menu_toggle_gamepad_combo = "0"
+audio_latency = "64"
+audio_block_frames = "0"
+rewind_granularity = "1"
+autosave_interval = "0"
+libretro_log_level = "0"
+keyboard_gamepad_mapping_type = "1"
+input_poll_type_behavior = "2"
+video_monitor_index = "0"
+video_fullscreen_x = "0"
+video_fullscreen_y = "0"
+video_window_x = "0"
+video_window_y = "0"
+network_cmd_port = "55355"
+network_remote_base_port = "55400"
+dpi_override_value = "200"
+menu_thumbnails = "3"
+xmb_alpha_factor = "75"
+xmb_scale_factor = "100"
+xmb_theme = "0"
+xmb_menu_color_theme = "4"
+materialui_menu_color_theme = "0"
+menu_shader_pipeline = "2"
+audio_out_rate = "48000"
 custom_viewport_width = "960"
 custom_viewport_height = "720"
 custom_viewport_x = "0"
 custom_viewport_y = "0"
-gamma_correction = "false"
-flicker_filter_enable = "false"
-soft_filter_enable = "false"
-console_resolution_width = "0"
-console_resolution_height = "0"
-soft_filter_index = "0"
-current_resolution_id = "0"
-flicker_filter_index = "0"
-video_font_size = "32.000000"
-block_sram_overwrite = "false"
-savestate_auto_index = "false"
-savestate_auto_save = "false"
-savestate_auto_load = "false"
-history_list_enable = "true"
-network_cmd_enable = "false"
-stdin_cmd_enable = "false"
-network_cmd_port = "55355"
-fastforward_ratio = "0.000000"
-slowmotion_ratio = "3.000000"
+content_history_size = "100"
+video_hard_sync_frames = "0"
+video_frame_delay = "0"
+video_max_swapchain_images = "3"
+video_swap_interval = "1"
+video_rotation = "0"
+aspect_ratio_index = "21"
 state_slot = "0"
-netplay_spectator_mode_enable = "false"
-netplay_mode = "false"
-netplay_ip_port = "0"
-netplay_delay_frames = "0"
+netplay_ip_port = "55435"
+netplay_check_frames = "30"
+netplay_input_latency_frames_min = "0"
+netplay_input_latency_frames_range = "0"
 user_language = "0"
-custom_bgm_enable = "false"
-input_driver = "udev"
-input_joypad_driver = "udev"
+bundle_assets_extract_version_current = "0"
+bundle_assets_extract_last_version = "0"
 input_device_p1 = "0"
 input_player1_joypad_index = "0"
 input_libretro_device_p1 = "1"
@@ -226,6 +166,104 @@ input_device_p16 = "0"
 input_player16_joypad_index = "15"
 input_libretro_device_p16 = "1"
 input_player16_analog_dpad_mode = "0"
+ui_companion_start_on_boot = "true"
+ui_companion_enable = "false"
+video_gpu_record = "false"
+input_remap_binds_enable = "true"
+all_users_control_menu = "false"
+menu_swap_ok_cancel_buttons = "false"
+netplay_stateless_mode = "false"
+netplay_client_swap_input = "true"
+input_descriptor_label_show = "true"
+input_descriptor_hide_unbound = "false"
+load_dummy_on_core_shutdown = "true"
+check_firmware_before_loading = "false"
+builtin_mediaplayer_enable = "true"
+builtin_imageviewer_enable = "true"
+fps_show = "false"
+ui_menubar_enable = "true"
+suspend_screensaver_enable = "true"
+rewind_enable = "false"
+audio_sync = "true"
+video_shader_enable = "false"
+video_aspect_ratio_auto = "false"
+video_allow_rotate = "true"
+video_windowed_fullscreen = "true"
+video_crop_overscan = "true"
+video_scale_integer = "false"
+video_smooth = "true"
+video_force_aspect = "true"
+video_threaded = "false"
+video_shared_context = "false"
+auto_screenshot_filename = "true"
+video_force_srgb_disable = "false"
+video_fullscreen = "false"
+bundle_assets_extract_enable = "false"
+video_vsync = "true"
+video_hard_sync = "false"
+video_black_frame_insertion = "false"
+video_disable_composition = "false"
+pause_nonactive = "true"
+video_gpu_screenshot = "true"
+video_post_filter_record = "false"
+keyboard_gamepad_enable = "true"
+core_set_supports_no_game_enable = "true"
+audio_enable = "true"
+audio_mute_enable = "false"
+location_allow = "false"
+video_font_enable = "true"
+core_updater_auto_extract_archive = "true"
+camera_allow = "false"
+menu_unified_controls = "false"
+threaded_data_runloop_enable = "true"
+menu_throttle_framerate = "true"
+menu_linear_filter = "true"
+dpi_override_enable = "true"
+menu_pause_libretro = "true"
+menu_mouse_enable = "true"
+menu_pointer_enable = "false"
+menu_timedate_enable = "true"
+menu_battery_level_enable = "true"
+menu_core_enable = "true"
+menu_dynamic_wallpaper_enable = "false"
+xmb_shadows_enable = "true"
+xmb_show_settings = "true"
+xmb_show_images = "true"
+xmb_show_music = "true"
+xmb_show_video = "true"
+xmb_show_history = "true"
+xmb_show_add = "true"
+rgui_show_start_screen = "false"
+menu_navigation_wraparound_enable = "true"
+menu_navigation_browser_filter_supported_extensions_enable = "true"
+menu_show_advanced_settings = "false"
+cheevos_enable = "false"
+cheevos_test_unofficial = "false"
+cheevos_hardcore_mode_enable = "false"
+input_overlay_enable = "true"
+input_overlay_enable_autopreferred = "true"
+input_overlay_hide_in_menu = "true"
+network_cmd_enable = "false"
+stdin_cmd_enable = "false"
+network_remote_enable = "false"
+netplay_nat_traversal = "true"
+block_sram_overwrite = "false"
+savestate_auto_index = "false"
+savestate_auto_save = "false"
+savestate_auto_load = "false"
+savestate_thumbnail_enable = "false"
+history_list_enable = "true"
+playlist_entry_remove = "true"
+game_specific_options = "false"
+auto_overrides_enable = "true"
+auto_remaps_enable = "true"
+auto_shaders_enable = "true"
+sort_savefiles_enable = "false"
+sort_savestates_enable = "false"
+show_hidden_files = "true"
+input_autodetect_enable = "true"
+audio_rate_control = "true"
+custom_bgm_enable = "false"
 network_remote_enable_user_p1 = "false"
 network_remote_enable_user_p2 = "false"
 network_remote_enable_user_p3 = "false"
@@ -242,8 +280,18 @@ network_remote_enable_user_p13 = "false"
 network_remote_enable_user_p14 = "false"
 network_remote_enable_user_p15 = "false"
 network_remote_enable_user_p16 = "false"
-network_remote_enable = "false"
-network_remote_base_port = "55400"
+log_verbosity = "false"
+perfcnt_enable = "false"
+video_message_color = "ffff00"
+menu_entry_normal_color = "ffffffff"
+menu_entry_hover_color = "ff64ff64"
+menu_title_color = "ff64ff64"
+gamma_correction = "false"
+flicker_filter_enable = "false"
+soft_filter_enable = "false"
+soft_filter_index = "0"
+current_resolution_id = "0"
+flicker_filter_index = "0"
 input_player1_b = "z"
 input_player1_b_btn = "nul"
 input_player1_b_axis = "nul"
@@ -382,9 +430,12 @@ input_audio_mute_axis = "nul"
 input_osk_toggle = "f12"
 input_osk_toggle_btn = "nul"
 input_osk_toggle_axis = "nul"
-input_netplay_flip_players = "i"
-input_netplay_flip_players_btn = "nul"
-input_netplay_flip_players_axis = "nul"
+input_netplay_flip_players_1_2 = "nul"
+input_netplay_flip_players_1_2_btn = "nul"
+input_netplay_flip_players_1_2_axis = "nul"
+input_netplay_game_watch = "i"
+input_netplay_game_watch_btn = "nul"
+input_netplay_game_watch_axis = "nul"
 input_slowmotion = "e"
 input_slowmotion_btn = "nul"
 input_slowmotion_axis = "nul"
@@ -412,6 +463,9 @@ input_disk_prev_axis = "nul"
 input_grab_mouse_toggle = "f11"
 input_grab_mouse_toggle_btn = "nul"
 input_grab_mouse_toggle_axis = "nul"
+input_game_focus_toggle = "scroll_lock"
+input_game_focus_toggle_btn = "nul"
+input_game_focus_toggle_axis = "nul"
 input_menu_toggle = "f1"
 input_menu_toggle_btn = "nul"
 input_menu_toggle_axis = "nul"
@@ -1540,70 +1594,32 @@ input_player16_r_y_minus_axis = "nul"
 input_player16_turbo = "nul"
 input_player16_turbo_btn = "nul"
 input_player16_turbo_axis = "nul"
-core_specific_config = "false"
-game_specific_options = "false"
-auto_overrides_enable = "true"
-auto_remaps_enable = "true"
-sort_savefiles_enable = "false"
-sort_savestates_enable = "false"
-libretro_log_level = "0"
-log_verbosity = "false"
-perfcnt_enable = "false"
-keyboard_gamepad_enable = "true"
-keyboard_gamepad_mapping_type = "1"
-core_set_supports_no_game_enable = "true"
-menu_ok_btn = "8"
-menu_cancel_btn = "0"
-menu_search_btn = "9"
-menu_info_btn = "2"
-menu_default_btn = "3"
-menu_scroll_down_btn = "11"
-menu_scroll_up_btn = "10"
-input_bind_timeout = "5"
-ui_companion_enable = "false"
-recording_output_directory = ""
-recording_config_directory = ""
-core_options_path = ""
-video_shader = ""
-bundle_assets_src_path = ""
-bundle_assets_dst_path = ""
-bundle_assets_dst_path_subdir = ""
-menu_wallpaper = ""
-menu_wallpaper_opacity = "0.300000"
-menu_footer_opacity = "1.000000"
-menu_header_opacity = "1.000000"
+xmb_font = ""
+netplay_nickname = ""
 video_filter = ""
 audio_dsp_plugin = ""
+netplay_ip_address = ""
+netplay_password = ""
+netplay_spectate_password = ""
+core_options_path = ""
+video_shader = ""
+menu_wallpaper = ""
 input_overlay = ""
-input_osk_overlay = ""
 video_font_path = ""
 content_history_dir = ""
+cache_directory = ""
+resampler_directory = ""
+recording_output_directory = ""
+recording_config_directory = ""
+xmb_font = ""
 playlist_names = ""
 playlist_cores = ""
-menu_throttle_framerate = "true"
-menu_linear_filter = "true"
-menu_thumbnails = "3"
-video_max_swapchain_images = "3"
-auto_screenshot_filename = "true"
 audio_device = ""
 camera_device = ""
-cheevos_hardcore_mode_enable = "false"
 cheevos_username = ""
 cheevos_password = ""
 video_context_driver = ""
-video_message_color = "ffff00"
-cache_directory = ""
-resampler_directory = ""
-thumbnails_directory = "~/.config/retroarch/thumbnails"
-xmb_scale_factor = "100"
-xmb_alpha_factor = "75"
-xmb_theme = "0"
-xmb_menu_color_theme = "4"
-materialui_menu_color_theme = "0"
-xmb_shadows_enable = "true"
-menu_shader_pipeline = "2"
-xmb_font = ""
-netplay_ip_address = ""
-netplay_nickname = ""
 input_keyboard_layout = ""
-input_poll_type_behavior = "2"
+bundle_assets_src_path = ""
+bundle_assets_dst_path = ""
+bundle_assets_dst_path_subdir = ""
