Update to Retroarch 1.8.4

--- a/retroarch-1.8.4.cfg
+++ b/retroarch-1.8.4.cfg
@@ -1,3 +1,5 @@
+accessibility_enable = "false"
+accessibility_narrator_speech_speed = "5"
 ai_service_enable = "false"
 ai_service_mode = "0"
 ai_service_pause = "false"
@@ -66,10 +68,10 @@ cheevos_verbose_enable = "false"
 config_save_on_exit = "true"
 content_database_path = "~/.config/retroarch/database/rdb"
 content_favorites_path = "~/.config/retroarch/content_favorites.lpl"
-content_favorites_size = "100"
+content_favorites_size = "200"
 content_history_dir = ""
 content_history_path = "~/.config/retroarch/content_history.lpl"
-content_history_size = "100"
+content_history_size = "200"
 content_image_history_path = "~/.config/retroarch/content_image_history.lpl"
 content_music_history_path = "~/.config/retroarch/content_music_history.lpl"
 content_runtime_log = "true"
@@ -2690,6 +2692,8 @@ input_toggle_slowmotion = "nul"
 input_toggle_slowmotion_axis = "nul"
 input_toggle_slowmotion_btn = "nul"
 input_toggle_slowmotion_mbtn = "nul"
+input_turbo_default_button = "0"
+input_turbo_mode = "0"
 input_turbo_period = "6"
 input_volume_down = "subtract"
 input_volume_down_axis = "nul"
@@ -2716,10 +2720,12 @@ log_to_file = "false"
 log_to_file_timestamp = "false"
 log_verbosity = "false"
 materialui_auto_rotate_nav_bar = "true"
+materialui_dual_thumbnail_list_view_enable = "true"
 materialui_icons_enable = "true"
+materialui_landscape_layout_optimization = "1"
 materialui_menu_color_theme = "9"
 materialui_menu_transition_animation = "0"
-materialui_optimize_landscape_layout = "true"
+materialui_thumbnail_background_enable = "true"
 materialui_thumbnail_view_landscape = "2"
 materialui_thumbnail_view_portrait = "1"
 memory_show = "false"
@@ -2735,6 +2741,7 @@ menu_footer_opacity = "1.000000"
 menu_framebuffer_opacity = "0.900000"
 menu_header_opacity = "1.000000"
 menu_horizontal_animation = "true"
+menu_insert_disk_resume = "true"
 menu_left_thumbnails = "0"
 menu_linear_filter = "true"
 menu_mouse_enable = "true"
