Update for version 1.9.9

--- a/retroarch-1.9.9.cfg
+++ b/retroarch-1.9.9.cfg
@@ -2946,6 +2946,7 @@ quick_menu_show_add_to_favorites = "true"
 quick_menu_show_cheats = "true"
 quick_menu_show_close_content = "true"
 quick_menu_show_controls = "true"
+quick_menu_show_core_options_flush = "false"
 quick_menu_show_download_thumbnails = "true"
 quick_menu_show_information = "true"
 quick_menu_show_options = "true"
@@ -3066,7 +3067,7 @@ user_language = "0"
 vibrate_on_keypress = "false"
 video_adaptive_vsync = "false"
 video_allow_rotate = "true"
-video_aspect_ratio = "-1.000000"
+video_aspect_ratio = "1.333300"
 video_aspect_ratio_auto = "false"
 video_black_frame_insertion = "0"
 video_context_driver = ""
@@ -3089,6 +3090,11 @@ video_gpu_record = "false"
 video_gpu_screenshot = "true"
 video_hard_sync = "false"
 video_hard_sync_frames = "0"
+video_hdr_contrast = "1.000000"
+video_hdr_enable = "false"
+video_hdr_expand_gamut = "true"
+video_hdr_max_nits = "1000.000000"
+video_hdr_paper_white_nits = "200.000000"
 video_layout_directory = "~/.config/retroarch/layouts"
 video_layout_enable = "true"
 video_layout_path = ""
