Update to Retroarch 1.9.10

--- a/retroarch-1.9.10.cfg
+++ b/retroarch-1.9.10.cfg
@@ -2688,6 +2688,7 @@ input_rewind = "r"
 input_rewind_axis = "nul"
 input_rewind_btn = "nul"
 input_rewind_mbtn = "nul"
+input_rumble_gain = "100"
 input_runahead_toggle = "nul"
 input_runahead_toggle_axis = "nul"
 input_runahead_toggle_btn = "nul"
@@ -3090,7 +3091,7 @@ video_gpu_record = "false"
 video_gpu_screenshot = "true"
 video_hard_sync = "false"
 video_hard_sync_frames = "0"
-video_hdr_contrast = "1.000000"
+video_hdr_display_contrast = "5.000000"
 video_hdr_enable = "false"
 video_hdr_expand_gamut = "true"
 video_hdr_max_nits = "1000.000000"
