--- a/retroarch-1.9.14.cfg
+++ b/retroarch-1.9.14.cfg
@@ -6,6 +6,7 @@ ai_service_pause = "false"
 ai_service_source_lang = "0"
 ai_service_target_lang = "0"
 ai_service_url = "http://localhost:4404/"
+all_users_control_menu = "false"
 apply_cheats_after_load = "false"
 apply_cheats_after_toggle = "false"
 aspect_ratio_index = "22"
@@ -58,9 +59,10 @@ check_firmware_before_loading = "false"
 cheevos_auto_screenshot = "false"
 cheevos_badges_enable = "false"
 cheevos_challenge_indicators = "true"
+cheevos_custom_host = ""
 cheevos_enable = "false"
-cheevos_hardcore_mode_enable = "false"
-cheevos_leaderboards_enable = ""
+cheevos_hardcore_mode_enable = "true"
+cheevos_leaderboards_enable = "true"
 cheevos_password = ""
 cheevos_richpresence_enable = "true"
 cheevos_start_active = "false"
@@ -68,7 +70,7 @@ cheevos_test_unofficial = "false"
 cheevos_token = ""
 cheevos_unlock_sound_enable = "false"
 cheevos_username = ""
-cheevos_verbose_enable = "false"
+cheevos_verbose_enable = "true"
 config_save_on_exit = "true"
 content_database_path = "~/.config/retroarch/database/rdb"
 content_favorites_directory = "default"
@@ -2857,12 +2859,14 @@ midi_driver = "alsa"
 midi_input = "Off"
 midi_output = "Off"
 midi_volume = "100"
+netplay_allow_pausing = "false"
 netplay_allow_slaves = "true"
 netplay_check_frames = "600"
 netplay_input_latency_frames_min = "0"
 netplay_input_latency_frames_range = "0"
 netplay_ip_address = ""
 netplay_ip_port = "55435"
+netplay_max_connections = "3"
 netplay_mitm_server = "nyc"
 netplay_nat_traversal = "true"
 netplay_nickname = ""
@@ -2916,6 +2920,7 @@ notification_show_autoconfig = "true"
 notification_show_cheats_applied = "true"
 notification_show_config_override_load = "true"
 notification_show_fast_forward = "true"
+notification_show_netplay_extra = "false"
 notification_show_patch_applied = "true"
 notification_show_refresh_rate = "true"
 notification_show_remap_load = "true"
@@ -3085,6 +3090,7 @@ video_font_size = "32.000000"
 video_force_aspect = "true"
 video_force_srgb_disable = "false"
 video_frame_delay = "0"
+video_frame_delay_auto = "false"
 video_fullscreen = "false"
 video_fullscreen_x = "0"
 video_fullscreen_y = "0"
